# ai-coding-bake-off

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.claude-mpm/: AGENT_DELEGATION.md  INSTRUCTIONS.md  WORKFLOW.md  mcp-config.md
agents/: README.md
agents/augment/: README.md
agents/codex/: README.md
agents/cursor/: README.md
agents/deepseek-aider/: README.md
challenges/: README.md
challenges/level-1-table-formatter/: PROBLEM.md
challenges/level-1-table-formatter/evaluation/: rubric.md
challenges/level-1-table-formatter/test_suite/: test_basic.py
challenges/level-1-table-formatter/test_suite/fixtures/: edge_cases.csv  simple.csv  unicode.csv
challenges/level-2-git-analyzer/: PROBLEM.md
challenges/level-2-git-analyzer/evaluation/: rubric.md
challenges/level-2-git-analyzer/test_suite/: test_basic.py
challenges/level-2-git-analyzer/test_suite/fixtures/: sample_git_log.txt
challenges/level-3-weather-alerter/: PROBLEM.md
challenges/level-3-weather-alerter/evaluation/: rubric.md
challenges/level-3-weather-alerter/test_suite/: test_basic.py
challenges/level-3-weather-alerter/test_suite/fixtures/: mock_weather_response.json
challenges/level-4-doc-pipeline/: PROBLEM.md
challenges/level-4-doc-pipeline/evaluation/: rubric.md
challenges/level-4-doc-pipeline/test_suite/: test_basic.py
challenges/level-4-doc-pipeline/test_suite/fixtures/: sample.txt
challenges/level-5-task-board/: PROBLEM.md
challenges/level-5-task-board/evaluation/: rubric.md
challenges/level-5-task-board/test_suite/: test_basic.py
docs/: article-outline.md  methodology.md
evaluation/: README.md
evaluation/automated/: code_quality.py  coverage_check.py  metrics.py  run_tests.py
evaluation/cross_review/: review_prompt.md  rubric_template.md
harnesses/: README.md
harnesses/anti-gravity/: README.md
harnesses/anti-gravity/instructions/: setup.md
harnesses/auggie/: README.md
harnesses/auggie/instructions/: setup.md
harnesses/auggie/output/level-1/: README.md
harnesses/auggie/output/level-2/: README.md
harnesses/augment/instructions/: setup.md
harnesses/claude-code/: README.md
harnesses/claude-code/instructions/: CLAUDE.md  setup.md
harnesses/claude-mpm/: README.md
harnesses/claude-mpm/.claude-mpm/: PM_INSTRUCTIONS.md  PM_INSTRUCTIONS_DEPLOYED.md  message_check_state.json  pm_skills_registry.yaml
harnesses/claude-mpm/.claude-mpm/correlations/: correlation_8c943263-8763-4de8-9f9b-c511b37f410a.json
harnesses/claude-mpm/instructions/: CLAUDE.md  setup.md
harnesses/claude-mpm/instructions/.claude-mpm/: INSTRUCTIONS.md  WORKFLOW.md
harnesses/claude-mpm/output/level-1/: README.md  metadata.json  pyproject.toml
harnesses/claude-mpm/output/level-1/table_formatter/: __init__.py  __main__.py  cli.py  detector.py  formatter.py
harnesses/claude-mpm/output/level-1/tests/: test_additional.py
harnesses/claude-mpm/output/level-2/: README.md  metadata.json  pyproject.toml  pyrightconfig.json
harnesses/claude-mpm/output/level-2/src/git_analyzer/: __init__.py  __main__.py  metrics.py  parser.py  reporter.py  sample_git_log.txt
harnesses/claude-mpm/output/level-2/tests/: test_metrics.py  test_parser.py
harnesses/claude-mpm/output/level-3/: .env.example  Dockerfile  docker-compose.yml  metadata.json  pyproject.toml  pyrightconfig.json
harnesses/claude-mpm/output/level-3/tests/: __init__.py  conftest.py  test_alerts.py  test_api.py
harnesses/claude-mpm/output/level-3/weather_alerter/: __init__.py  alerts.py  app.py  database.py  models.py  scheduler.py  weather_client.py
harnesses/claude-mpm/output/level-3/weather_alerter/routes/: __init__.py  alerts.py  cities.py  thresholds.py  weather.py
harnesses/claude-mpm/output/level-4/: ARCHITECTURE.md  Dockerfile  README.md  docker-compose.yml  metadata.json  pyproject.toml  pyrightconfig.json
harnesses/claude-mpm/output/level-4/doc_pipeline/: __init__.py  __main__.py  app.py  database.py  extractors.py  models.py  nlp.py  pipeline.py  search.py
harnesses/claude-mpm/output/level-4/doc_pipeline/routes/: __init__.py
harnesses/claude-mpm/output/level-4/doc_pipeline/stages/: __init__.py  extraction.py  indexing.py  nlp_stage.py  sentiment.py
harnesses/claude-mpm/output/level-4/tests/: __init__.py  conftest.py  test_api.py  test_extractors.py  test_nlp.py  test_pipeline.py  test_search.py
harnesses/claude-mpm/output/level-5/: .env.example  Dockerfile  conftest.py  docker-compose.yml  metadata.json  pyproject.toml  pyrightconfig.json
harnesses/claude-mpm/output/level-5/.claude-mpm/correlations/: correlation_8c943263-8763-4de8-9f9b-c511b37f410a.json
harnesses/claude-mpm/output/level-5/.github/workflows/: ci.yml
harnesses/claude-mpm/output/level-5/static/: index.html
harnesses/claude-mpm/output/level-5/task_board/: __init__.py  __main__.py  app.py  auth.py  config.py  database.py  deps.py  main.py  models.py  schemas.py  seed.py  websocket.py
harnesses/claude-mpm/output/level-5/task_board/routes/: activity.py  auth.py  boards.py  columns.py  tasks.py  users.py
harnesses/claude-mpm/output/level-5/tests/: conftest.py  test_activity.py  test_auth.py  test_boards.py  test_tasks.py  test_websocket.py
harnesses/codex/instructions/: AGENTS.md  setup.md
harnesses/codex/output/level-1/: README.md
harnesses/codex/output/level-2/: README.md
harnesses/codex/output/level-3/: README.md
harnesses/cursor/instructions/: .cursorrules  setup.md
harnesses/deepseek-aider/: run-bakeoff.sh  run-level.sh
harnesses/deepseek-aider/instructions/: INSTRUCTIONS.md  aider.conf.yml  setup.md
harnesses/gemini/: README.md
harnesses/gemini/instructions/: GEMINI.md  setup.md
harnesses/qwen-aider/: README.md  run-bakeoff.sh  run-level.sh
harnesses/qwen-aider/instructions/: INSTRUCTIONS.md  aider.conf.yml  setup.md
harnesses/warp/: README.md
harnesses/warp/instructions/: setup.md
prompts/: README.md  level-1-prompt.md  level-2-prompt.md  level-3-prompt.md  level-4-prompt.md  level-5-prompt.md
scripts/: collect_metrics.py  generate_report.py  setup_agent_workspace.sh
