[project]
name = "ai-coding-bake-off"
version = "0.1.0"
description = "Benchmark suite for evaluating AI coding agents across Python challenges"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "Bob Matsuoka", email = "bob@duetto.com"},
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.10",
    "pylint>=3.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
strict_equality = true
show_error_codes = true

[tool.pytest.ini_options]
testpaths = ["challenges", "agents"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow",
    "level1: Level 1 challenge tests",
    "level2: Level 2 challenge tests",
    "level3: Level 3 challenge tests",
    "level4: Level 4 challenge tests",
    "level5: Level 5 challenge tests",
]
