[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "doc-pipeline"
version = "1.0.0"
description = "A clean, extensible document processing pipeline"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["document", "pipeline", "nlp", "search", "text-processing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.6.0",
    "pypdf>=4.0.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "mypy>=1.9.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
doc-pipeline = "doc_pipeline.__main__:main"

[project.urls]
Homepage = "https://github.com/example/doc-pipeline"
Repository = "https://github.com/example/doc-pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["doc_pipeline*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_generics = true
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["doc_pipeline"]
